national number is customer_info is disable

--- a/start_grant/templates/_customer_info.html
+++ b/start_grant/templates/_customer_info.html
@@ -88,7 +88,7 @@
                         کد ملی
                     </div>
                     <div class="col-xs-3">
-                        <input type="text" class="form-control" name="national_number" readonly="readonly"
+                        <input type="text" class="form-control" name="national_number" disabled="disabled" readonly="readonly"
                                value="{{ customer_request.cif }}"
                                required
                                data-validation-required-message="وارد کردن این فیلد الزامی است"
