--- a/start_grant/templates/submit_data.html
+++ b/start_grant/templates/submit_data.html
@@ -5,81 +5,81 @@
     <div style="border: 1px solid #dddddd;border-radius: 5px;"
          class="form-group">
         <div class="row rose-progress-bar" style="padding-top:15px;padding-bottom:15px; margin:0px;">
-            <div class="col-xs-2
-            {% if customer_info %}
-            completed
-            {% else %}
-            pending
-            {% endif %}
-            rose-progress-bar-cell" id="customer_info">
-                <div class="row">
-                    <div class="col-xs-8">
-                        اطلاعات شخصی
-                    </div>
-                    <div id="customer_info_state" class="col-xs-1">
-                        <span id="failed" class="glyphicon glyphicon-remove" style="color: red;
-                                 display: none;
-
-                                "></span>
-                        <span id="ok" class="glyphicon glyphicon-ok" style="color: green;
-                                {% if  not customer_info %}
-                                    display: none;
-                                {% endif %}
-                                "></span>
-                    </div>
-                    <div id="customer_info_loader" class="col-xs-1">
-
-                    </div>
-                </div>
-            </div>
-            <div class="col-xs-2
-
-             {% if customer_info.contact_info %}
-                completed
-             {% else %}
-                pending
-             {% endif %}
-
-             rose-progress-bar-cell" id="contact_info">
-                <div class="row">
-                    <div class="col-xs-8">
-                        اطلاعات تماس
-                    </div>
-                    <div id="contact_info_state" class="col-xs-1">
-                        <span id="failed" class="glyphicon glyphicon-remove" style="color: red;display: none;"></span>
-                        <span id="ok" class="glyphicon glyphicon-ok" style="color: green;
-                                {% if not customer_info.contact_info %}
-                                    display: none;"></span>
-                                {% endif %}
-                    </div>
-                    <div id="contact_info_loader" class="col-xs-1">
-                    </div>
-                </div>
-            </div>
-            <div class="col-xs-2
-             {% if customer_info.job_info %}
-                completed
-             {% else %}
-                pending
-             {% endif %}
-             rose-progress-bar-cell" id="job_info">
-                <div class="row">
-                    <div class="col-xs-8">
-                        اطلاعات شغلی
-                    </div>
-                    <div id="job_info_state" class="col-xs-1">
-                        <span id="failed" class="glyphicon glyphicon-remove" style="color: red;display: none;"></span>
-                        <span id="ok" class="glyphicon glyphicon-ok" style="color: green;
-                                {% if not customer_info.job_info %}
-                                    display: none;
-                                {% endif %}
-                                "></span>
-                    </div>
-                    <div id="job_info_loader" class="col-xs-1">
-                    </div>
-                </div>
-            </div>
-            <div class="col-xs-2
+{#            <div class="col-xs-2#}
+{#            {% if customer_info %}#}
+{#            completed#}
+{#            {% else %}#}
+{#            pending#}
+{#            {% endif %}#}
+{#            rose-progress-bar-cell" id="customer_info">#}
+{#                <div class="row">#}
+{#                    <div class="col-xs-8">#}
+{#                        اطلاعات شخصی#}
+{#                    </div>#}
+{#                    <div id="customer_info_state" class="col-xs-1">#}
+{#                        <span id="failed" class="glyphicon glyphicon-remove" style="color: red;#}
+{#                                 display: none;#}
+{##}
+{#                                "></span>#}
+{#                        <span id="ok" class="glyphicon glyphicon-ok" style="color: green;#}
+{#                                {% if  not customer_info %}#}
+{#                                    display: none;#}
+{#                                {% endif %}#}
+{#                                "></span>#}
+{#                    </div>#}
+{#                    <div id="customer_info_loader" class="col-xs-1">#}
+{##}
+{#                    </div>#}
+{#                </div>#}
+{#            </div>#}
+{#            <div class="col-xs-2#}
+{##}
+{#             {% if customer_info.contact_info %}#}
+{#                completed#}
+{#             {% else %}#}
+{#                pending#}
+{#             {% endif %}#}
+{##}
+{#             rose-progress-bar-cell" id="contact_info">#}
+{#                <div class="row">#}
+{#                    <div class="col-xs-8">#}
+{#                        اطلاعات تماس#}
+{#                    </div>#}
+{#                    <div id="contact_info_state" class="col-xs-1">#}
+{#                        <span id="failed" class="glyphicon glyphicon-remove" style="color: red;display: none;"></span>#}
+{#                        <span id="ok" class="glyphicon glyphicon-ok" style="color: green;#}
+{#                                {% if not customer_info.contact_info %}#}
+{#                                    display: none;"></span>#}
+{#                                {% endif %}#}
+{#                    </div>#}
+{#                    <div id="contact_info_loader" class="col-xs-1">#}
+{#                    </div>#}
+{#                </div>#}
+{#            </div>#}
+{#            <div class="col-xs-2#}
+{#             {% if customer_info.job_info %}#}
+{#                completed#}
+{#             {% else %}#}
+{#                pending#}
+{#             {% endif %}#}
+{#             rose-progress-bar-cell" id="job_info">#}
+{#                <div class="row">#}
+{#                    <div class="col-xs-8">#}
+{#                        اطلاعات شغلی#}
+{#                    </div>#}
+{#                    <div id="job_info_state" class="col-xs-1">#}
+{#                        <span id="failed" class="glyphicon glyphicon-remove" style="color: red;display: none;"></span>#}
+{#                        <span id="ok" class="glyphicon glyphicon-ok" style="color: green;#}
+{#                                {% if not customer_info.job_info %}#}
+{#                                    display: none;#}
+{#                                {% endif %}#}
+{#                                "></span>#}
+{#                    </div>#}
+{#                    <div id="job_info_loader" class="col-xs-1">#}
+{#                    </div>#}
+{#                </div>#}
+{#            </div>#}
+            <div class="col-xs-6
              {% if customer_request.complete_information %}
                    completed
              {% else %}
@@ -103,30 +103,30 @@
                     </div>
                 </div>
             </div>
-            <div class="col-xs-2
-             {% if customer_info.asset_info %}
-             completed
-             {% else %}
-             pending
-             {% endif %}
-             rose-progress-bar-cell" id="asset_info" style="padding-right: 0px;">
-                <div class="row">
-                    <div class="col-xs-9">
-                        دارایی ها و بدهی ها
-                    </div>
-                    <div id="asset_info_state" class="col-xs-1">
-                        <span id="failed" class="glyphicon glyphicon-remove" style="color: red;display: none;"></span>
-                        <span id="ok" class="glyphicon glyphicon-ok" style="color: green;
-                                {% if not customer_info.asset_info %}
-                                    display: none;
-                                {% endif %}
-                                "></span>
-                    </div>
-                    <div id="asset_info_loader" class="col-xs-1">
-                    </div>
-                </div>
-            </div>
-            <div class="col-xs-2
+{#            <div class="col-xs-2#}
+{#             {% if customer_info.asset_info %}#}
+{#             completed#}
+{#             {% else %}#}
+{#             pending#}
+{#             {% endif %}#}
+{#             rose-progress-bar-cell" id="asset_info" style="padding-right: 0px;">#}
+{#                <div class="row">#}
+{#                    <div class="col-xs-9">#}
+{#                        دارایی ها و بدهی ها#}
+{#                    </div>#}
+{#                    <div id="asset_info_state" class="col-xs-1">#}
+{#                        <span id="failed" class="glyphicon glyphicon-remove" style="color: red;display: none;"></span>#}
+{#                        <span id="ok" class="glyphicon glyphicon-ok" style="color: green;#}
+{#                                {% if not customer_info.asset_info %}#}
+{#                                    display: none;#}
+{#                                {% endif %}#}
+{#                                "></span>#}
+{#                    </div>#}
+{#                    <div id="asset_info_loader" class="col-xs-1">#}
+{#                    </div>#}
+{#                </div>#}
+{#            </div>#}
+            <div class="col-xs-6
              {% if customer_info.bank_income_info %}
              completed
              {% else %}
