--- a/start_grant/templates/_enterprise_bank_info.html
+++ b/start_grant/templates/_enterprise_bank_info.html
@@ -45,44 +45,46 @@
                         </div>
                     </div>
                 </div>
-                <div class="row">
-                    <div class="col-xs-5" style="font-weight: bold;">
-                        سند ملکی
+                <div id="sanad-melki">
+                    <div class="row">
+                        <div class="col-xs-5" style="font-weight: bold;">
+                            سند ملکی
+                        </div>
                     </div>
-                </div>
-                <div class="row">
-                    <div class="col-xs-2">
-                        شماره سند
-                    </div>
-                    <div class="col-xs-3">
-                        <input type="number" class="form-control" name="sanad_no"
-                               value="{{ customer_request.vasighe_information.sanad_melki_info.sanad_no }}"/>
-                    </div>
-                    <div class="col-xs-2">
-                        نام مالک
-                    </div>
-                    <div class="col-xs-3">
-                        <input type="text" class="form-control" name="owner_name"
-                               value="{{ customer_request.vasighe_information.sanad_melki_info.owner_name }}"
-                                />
-                    </div>
+                    <div class="row">
+                        <div class="col-xs-2">
+                            شماره سند
+                        </div>
+                        <div class="col-xs-3">
+                            <input type="number" class="form-control" name="sanad_no"
+                                   value="{{ customer_request.vasighe_information.sanad_melki_info.sanad_no }}"/>
+                        </div>
+                        <div class="col-xs-2">
+                            نام مالک
+                        </div>
+                        <div class="col-xs-3">
+                            <input type="text" class="form-control" name="owner_name"
+                                   value="{{ customer_request.vasighe_information.sanad_melki_info.owner_name }}"
+                                    />
+                        </div>
 
-                </div>
-                <div class="row">
-                    <div class="col-xs-2">
-                        ارزش فعلی
                     </div>
-                    <div class="col-xs-3">
-                        <input type="number" name="current_value" class="form-control"
-                               value="{{ customer_request.vasighe_information.sanad_melki_info.current_value }}"
-                                />
-                    </div>
-                    <div class="col-xs-2">
-                        آدرس
-                    </div>
-                    <div class="col-xs-3">
-                        <input type="text" name="address" class="form-control"
-                               value="{{ customer_request.vasighe_information.sanad_melki_info.address }}"/>
+                    <div class="row">
+                        <div class="col-xs-2">
+                            ارزش فعلی
+                        </div>
+                        <div class="col-xs-3">
+                            <input type="number" name="current_value" class="form-control"
+                                   value="{{ customer_request.vasighe_information.sanad_melki_info.current_value }}"
+                                    />
+                        </div>
+                        <div class="col-xs-2">
+                            آدرس
+                        </div>
+                        <div class="col-xs-3">
+                            <input type="text" name="address" class="form-control"
+                                   value="{{ customer_request.vasighe_information.sanad_melki_info.address }}"/>
+                        </div>
                     </div>
                 </div>
             </div>
