--- a/start_grant/templates/_enterprise_contact_info.html
+++ b/start_grant/templates/_enterprise_contact_info.html
@@ -8,7 +8,7 @@
         <form id="contact_info_form" name="contact_info_form" method="post"
               action="{% url 'customer:enterprise_contact_info' %}" novalidate>
             {% csrf_token %}
-            <input type="hidden" name="company_id" value="{{ customer_request.cif }}">
+            <input type="hidden" name="company_id" value="{{ customer_info.customer_code }}">
 
             <div class="control-group">
                 <div class="row controls">
