--- a/customer/templates/register_customer.html
+++ b/customer/templates/register_customer.html
@@ -57,7 +57,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-xs-3
+            <div class="col-xs-2
 
              {% if customer.contact_info %}
                 completed
@@ -81,7 +81,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-xs-3
+            <div class="col-xs-2
              {% if customer.job_info %}
                 completed
              {% else %}
@@ -104,7 +104,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-xs-3
+            <div class="col-xs-2
              {% if customer.bank_income_info %}
              completed
              {% else %}
@@ -125,6 +125,29 @@
                                 "></span>
                     </div>
                     <div id="bank_income_loader" class="col-xs-1">
+                    </div>
+                </div>
+            </div>
+            <div class="col-xs-3
+                 {% if customer.asset_info %}
+                 completed
+                 {% else %}
+                 pending
+                 {% endif %}
+                 rose-progress-bar-cell" id="asset_info" style="padding-right: 0px;">
+                <div class="row">
+                    <div class="col-xs-9">
+                        دارایی ها و بدهی ها
+                    </div>
+                    <div id="asset_info_state" class="col-xs-1">
+                        <span id="failed" class="glyphicon glyphicon-remove" style="color: red;display: none;"></span>
+                            <span id="ok" class="glyphicon glyphicon-ok" style="color: green;
+                                    {% if not customer.asset_info %}
+                                        display: none;
+                                    {% endif %}
+                                    "></span>
+                    </div>
+                    <div id="asset_info_loader" class="col-xs-1">
                     </div>
                 </div>
             </div>
@@ -156,6 +179,9 @@
                 </div>
                 <div class="rose-submit-container collapse" id="bank_income_info_container">
                     {% include '_guarantor_bank_income_info.html' %}
+                </div>
+                <div class="rose-submit-container collapse" id="asset_info_container">
+                    {% include '_asset_info.html' %}
                 </div>
             </div>
         </div>
